# AI-Agent

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  README.md  ROADMAP.md  TECHNICAL_BLUEPRINT.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: backend-pipeline.yml  ci-python.yml  ci.yml  code-quality.yml  codeql.yml  demo-ci.yml  docker-build.yml  frontend-pipeline.yml  master-ci.yml  security-audit.yml  security.yml  semgrep.yml  snake.yml  trivy.yml
Future-AGI/: requirements.txt
Future-AGI/.github/workflows/: codeql.yml
Future-AGI/automations/n8n_blueprints/: REAL_PROBLEMS.md
Future-AGI/backend/: requirements.txt
Future-AGI/docs/: STRATEGIC_OUTLOOK.md
Future-AGI/frontend/: package.json
apps/landing/: package.json
apps/landing/components/: QuickCitizenServices.jsx  ServicePillars.jsx  VenueSeatingControl.jsx  VoicePartnerHero.jsx
apps/landing/pages/: index.jsx  partner.jsx
automations/case_studies/: solar_lead_qual.md
automations/n8n_blueprints/: TOP_WORKFLOWS.md
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agents/: base_agent.py  coding_agent.py  coordinator_agent.py  judge_agent.py  linkedin_agent.py  planner_agent.py  research_agent.py
backend/app/api/: routes_agent.py  routes_health.py  routes_tasks.py
backend/app/communication/: whatsapp_manager.py
backend/app/core/: config.py  llm.py  logging.py  security.py  (+1 more)
deploy/production/: nginx.conf
docker/: docker-compose.yml
docs/: AI_OPTIMIZATION_CHART.md  ELITE_TACTICS.md  PRODUCTION_PATTERNS.md  PROMPTING_FRAMEWORK.md  agents.md  architecture.md
examples/: README.md  basic-agent.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: audit.py  build_rtila_exe.py  eventhive-sdk.ts  local_security_audit.py  monitor.go
tests/: conftest.py  test_agents.py  test_api.py  test_services.py
(+31 files in other folders)
